PRL-4408 cafcass code smell fix